# mm138

./: .gitignore  CMakeLists.txt  README.ja.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
data/: 0.in  1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
scripts/: 936.txt  952.txt  959.txt  dice.py  final.txt  visualizer.py
src/: CMakeLists.txt  main.cpp
